# filament-hermes

./: CLAUDE.md  LICENSE  README.md  install.sh  plugin.yaml  pyproject.toml
docs/: agent-boundaries.md
hermes_filament_fcm/: __init__.py  _version.py  adapter.py  credentials.py  default_instructions.md  deps.py  fcm_client.py  filament_api.py  media_tool.py  observability.py  reactive.py  setup_cli.py  tool_manifest.json  update_check.py
tests/: test_deps.py  test_fcm_dedup.py  test_fcm_persistent_ids.py  test_fcm_receiver_death.py  test_media_notes.py  test_reactive.py  test_system_notice_skip.py  test_version_and_update.py  test_vouch.py
