[project]
name = "hermes-filament-fcm"
version = "0.5.0"
description = "Hermes gateway adapter for Filament"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "firebase-messaging>=0.4.5,<1",
    "httpx>=0.24",
    "structlog>=25.5.0,<26",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
filament-fcm-setup = "hermes_filament_fcm.setup_cli:main"

# NOTE: no ``[project.entry-points."hermes_agent.plugins"]`` here.
# This plugin installs as a *directory plugin* (git-cloned into
# ~/.hermes/plugins/filament-fcm by install.sh), discovered via its root
# plugin.yaml + __init__.py — NOT as a pip entry-point plugin. Registering an
# entry point too would shadow the directory copy (entry points win the
# loader's dedup), so `hermes plugins update` would git-pull code that never
# runs. Keep this out. The package's own dependencies are still declared above
# so install.sh can install them; the package itself is not installed.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_filament_fcm"]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "B",          # flake8-bugbear
    "UP",         # pyupgrade
    "PLC", "PLE", "PLW",  # pylint
    "SIM",        # flake8-simplify
    "RUF",        # ruff-specific
]
